# proc-macro-workshop

./: Cargo.toml
macro_rules2/: Cargo.toml
macro_rules2/src/: delimiter.rs  group.rs  lib.rs  macro_match.rs  match_rep.rs  matcher.rs  meta_var.rs  repetition.rs  rule.rs  rules_def.rs  transcriber.rs
macro_rules2/tests/: 01-parse-header.rs  02-parse-macro.rs  progress.rs
seq/: Cargo.toml
seq/src/: lib.rs  partial_stream.rs  play.rs  template.rs
