[package]
name = "macro_rules2"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[bin]]
name = "playground"
required-features = ["playground"]

[features]
playground = ["rand"]

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = { version = "1" }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
rand = { version = "0.8", optional=true }

